--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>skills-matrix</title>
+    <link rel="stylesheet" href="static/css/paginated-list.css" />
   </head>
   <body>
     <div id="app"></div>
