Add plugins static files. Include the static files in the index.html. Create/Modify css static files to enhance UI. Create Navbar component. Modify existing components to enhance UI

--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>skills-matrix</title>
-    <link rel="stylesheet" href="static/css/paginated-list.css" />
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Skills Matrix</title>
+
+        <link rel="stylesheet" href="/static/plugins/basic-modal-3.3.8/basic-modal.min.css" />
+        <link rel="stylesheet" href="/static/plugins/bootstrap-3.3.7/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="/static/plugins/font-awesome-4.7.0/css/font-awesome.min.css" />
+        <link rel="stylesheet" href="/static/plugins/spin-kit-1.2.5/spinkit.css" />
+        <link rel="stylesheet" href="/static/plugins/toastr-2.1.3/toastr.min.css" />
+        <link rel="stylesheet" href="/static/css/bootstrap-fixes.css" />
+        <link rel="stylesheet" href="/static/css/generics.css" />
+        <link rel="stylesheet" href="/static/css/paginated-list.css" />
+    </head>
+    <body>
+        <div id="app"></div>
+
+        <script type="text/javascript" src="/static/plugins/jquery-2.2.0/jquery.min.js"></script>
+        <script type="text/javascript" src="/static/plugins/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="/static/plugins/basic-modal-3.3.8/basic-modal.min.js"></script>
+        <script type="text/javascript" src="/static/plugins/toastr-2.1.3/toastr.min.js"></script>
+        
+        <!-- built files will be auto injected -->
+    </body>
 </html>
