Add loader animations during AJAX calls

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="/static/plugins/toastr-2.1.3/toastr.min.css" />
         <link rel="stylesheet" href="/static/css/bootstrap-fixes.css" />
         <link rel="stylesheet" href="/static/css/generics.css" />
+        <link rel="stylesheet" href="/static/css/loading-animations.css" />
         <link rel="stylesheet" href="/static/css/paginated-list.css" />
     </head>
     <body>
