Adapt project architecture to modena

--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Skills Matrix</title>
 
-        <link rel="stylesheet" href="/static/plugins/basic-modal-3.3.8/basic-modal.min.css" />
-        <link rel="stylesheet" href="/static/plugins/bootstrap-3.3.7/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="/static/plugins/font-awesome-4.7.0/css/font-awesome.min.css" />
-        <link rel="stylesheet" href="/static/plugins/spin-kit-1.2.5/spinkit.css" />
-        <link rel="stylesheet" href="/static/plugins/toastr-2.1.3/toastr.min.css" />
-        <link rel="stylesheet" href="/static/css/bootstrap-fixes.css" />
-        <link rel="stylesheet" href="/static/css/generics.css" />
-        <link rel="stylesheet" href="/static/css/loading-animations.css" />
-        <link rel="stylesheet" href="/static/css/paginated-list.css" />
+        <link rel="stylesheet" href="/static/plugins/basic-modal-3.3.8/basic-modal.min.css?$modena=skills-matrix-client-vue" />
+        <link rel="stylesheet" href="/static/plugins/bootstrap-3.3.7/css/bootstrap.min.css?$modena=skills-matrix-client-vue" />
+        <link rel="stylesheet" href="/static/plugins/font-awesome-4.7.0/css/font-awesome.css?$modena=skills-matrix-client-vue" />
+        <link rel="stylesheet" href="/static/plugins/spin-kit-1.2.5/spinkit.css?$modena=skills-matrix-client-vue" />
+        <link rel="stylesheet" href="/static/plugins/toastr-2.1.3/toastr.min.css?$modena=skills-matrix-client-vue" />
+        <link rel="stylesheet" href="/static/css/bootstrap-fixes.css?$modena=skills-matrix-client-vue" />
+        <link rel="stylesheet" href="/static/css/generics.css?$modena=skills-matrix-client-vue" />
+        <link rel="stylesheet" href="/static/css/loading-animations.css?$modena=skills-matrix-client-vue" />
+        <link rel="stylesheet" href="/static/css/paginated-list.css?$modena=skills-matrix-client-vue" />
     </head>
     <body>
         <div id="app"></div>
 
-        <script type="text/javascript" src="/static/plugins/jquery-2.2.0/jquery.min.js"></script>
-        <script type="text/javascript" src="/static/plugins/bootstrap-3.3.7/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="/static/plugins/basic-modal-3.3.8/basic-modal.min.js"></script>
-        <script type="text/javascript" src="/static/plugins/toastr-2.1.3/toastr.min.js"></script>
+        <script type="text/javascript" src="/static/plugins/jquery-2.2.0/jquery.min.js?$modena=skills-matrix-client-vue"></script>
+        <script type="text/javascript" src="/static/plugins/bootstrap-3.3.7/js/bootstrap.min.js?$modena=skills-matrix-client-vue"></script>
+        <script type="text/javascript" src="/static/plugins/basic-modal-3.3.8/basic-modal.min.js?$modena=skills-matrix-client-vue"></script>
+        <script type="text/javascript" src="/static/plugins/toastr-2.1.3/toastr.min.js?$modena=skills-matrix-client-vue"></script>
         
         <!-- built files will be auto injected -->
     </body>
